# cronos-stream

./: .cli_history  .gitignore  CRONOPAY_PROJECT.md  CRONOS_STREAM.md  CRONOS_STREAM_V2.md  FINAL_TODO.md  LICENSE  POLISH.md  README.md  TODO.md  VIDEO_PITCH.md  check_balance.py  hackathonideas.md  verify_settlement.py
a2a/: README.md
a2a/a2a-service/: .env.example  .gitignore  README.md  trigger.sh
a2a/a2a-service/host/: channel_manager.py  service.py  test_integration.py
a2a/resource-service/: .env.example  README.md
contracts/: .gitignore  README.md  hardhat.config.ts  package-lock.json  package.json
contracts/contracts/: StreamChannel.sol  TUSDC.sol
contracts/deployments/: cronos-testnet.json
contracts/ignition/: parameters-cronos.json  parameters-localhost.json
contracts/ignition/modules/: StreamChannel.ts  StreamChannelOnly.ts
contracts/test/: StreamChannel.ts  TUSDC.ts
demo/: .cli_history  agent.sh  benchmark.sh  cli.py  docker-compose.yml  start.sh  stop.sh  trigger.sh
docs/: ARCHITECTURE.md  BENCHMARK_REPORT.md  CODE_TOUR.md  MIGRATION_GUIDE.md  REFERENCE_EXPLANATION.md  RELEASE_NOTES.md  walkthrough.md
scripts/: benchmark_suite.py  check_balance.py  close_all_channels.py  list_open_channels.py  open_channel.py  verify_llm.py  verify_llm_flow.py  verify_reusable_channel.py  verify_settlement.py
sequencer/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  sequence.md
sequencer/src/: config.rs  crypto.rs  db.rs  error.rs  handlers.rs  main.rs  model.rs  service.rs
(+6 files in other folders)
