[package]
name = "sequencer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework - handles HTTP requests (like Express.js)
axum = "0.7"

# Async runtime - Rust needs explicit async support (like Node's event loop)
tokio = { version = "1", features = ["full"] }

# Serialization - converts Rust structs to/from JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Ethereum library - handles addresses, signatures, EIP-712
alloy = { version = "1", features = ["full"] }

# Database - PostgreSQL with async support
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }

# Environment variables - loads .env files
dotenvy = "0.15"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"

# Hex encoding/decoding
hex = "0.4"
